--- a/.github/workflows/python-unittest-and-build.yml
+++ b/.github/workflows/python-unittest-and-build.yml
@@ -36,3 +36,5 @@ jobs:
         python -m build
     - name: Upload a build artifacts from dist/
       uses: actions/upload-artifact@v3.1.2
+      with:
+        path: dist/
